--- a/calculation/style.css
+++ b/calculation/style.css
@@ -2,7 +2,7 @@
   目次
 　0 共通パーツ
 　1 index.php
-　2 judgment.php
+　2 mode.php
 -------------------------*/
 
 /*-------------------------
@@ -40,4 +40,34 @@ body{
 -------------------------*/
 .question{
     font-size: 50px;
+}
+
+
+
+/*-------------------------
+　2 mode.php
+-------------------------*/
+.mode label{
+    /* display: block; */
+}
+
+.mode input[type="radio"]{
+    display: none;
+}
+
+.mode input[type="submit"]{
+    display: block;
+    margin: 0 auto;
+    padding: 10px 50%;
+}
+
+.mode img{
+    margin-left: 30px;
+    padding: 50px;
+    border: 1px solid #333;
+    margin-bottom: 50px;
+}
+
+.mode input:checked+img{
+    border: 6px solid #333;
 }
